[update to 3.15.1] rotateSingleLog: fix heap buffer overflow
Craig Treleaven (1):
      logrotate: do not use utimensat() on Darwin

Kamil Dudka (10):
      logrotate.8: encourage admins to use the `su` directive
      README.md: mention hourly rotation in the summary
      globerr: do not abort globbing on broken symlink
      test/Makefile.am: make `distcheck` work again
      rotateSingleLog: fix heap buffer overflow
      prerotateSingleLog: avoid dereferencing NULL pointer
      prerotateSingleLog: make dformat array big enough
      .travis.yml: use Ubuntu Trusty (a.k.a. 14.04)
      examples/btmp: use create mode 0660
      ChangeLog.md: user-visible changes to appear in 3.15.1

Sami Kerola (1):
      config: add variable initialization [-Wconditional-uninitialized]

Tilwa Qendov (2):
      man page: Rearrange configuration file directives
      man page: Rearrange commandline options

Key imported:
--list-packet:
# off=0 ctb=99 tag=6 hlen=3 plen=525
:public key packet:
	version 4, algo 1, created 1478710174, expires 0
	pkey[0]: [4096 bits]
	pkey[1]: [17 bits]
	keyid: 873DB37572A37B36
# off=528 ctb=b4 tag=13 hlen=2 plen=31
:user ID packet: "Kamil Dudka <kdudka@redhat.com>"
# off=561 ctb=89 tag=2 hlen=3 plen=573
:signature packet: algo 1, keyid 873DB37572A37B36

--fingerprint:
pub   rsa4096 2016-11-09 [SC] [expires: 2020-11-08]
      992A 96E0 7505 6E79 CD82  14F9 873D B375 72A3 7B36
uid           [ unknown] Kamil Dudka <kdudka@redhat.com>
sub   rsa4096 2016-11-09 [E] [expires: 2020-11-08]

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = logrotate
-url = https://github.com/logrotate/logrotate/releases/download/3.15.0/logrotate-3.15.0.tar.xz
+url = https://github.com/logrotate/logrotate/releases/download/3.15.1/logrotate-3.15.1.tar.xz
 archives = 
 giturl = https://github.com/logrotate/logrotate.git
 
@@ -54,5 +54,5 @@ use_clang = false
 # configure build for lto
 use_lto = true
 # require package verification for build
-verify_required = false
+verify_required = true
 
